--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -3,8 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
+		<script src = "http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 		<div class = "navbar" style="height:50px;width:100%">
 			<div class = "left" style="float:left;height:inherit;">
 				<h4> Google OAuth2.0 with Flask </h4>
