--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,6 +3,7 @@
 	{% if username %}
 		<p> Welcome {{username}} </p>
 	{% endif %}
+	<p> Name: {{controller.getName()}} </p>
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
