--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -163,6 +163,7 @@
 			<h1 class="text-center text-primary" style = "font-family:Gauntlet">
 				Clara-Lytics
 			</h1>
+			<span> Hello ! {{controller.display_username()}} </span>
 		</div>
 	</div>
 	<div class="row clearfix">
