separated graph js scripts and some changes in styling

--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -12,6 +12,7 @@
 		<script src="http://d3js.org/d3.v2.js"></script>
 		<script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
 		<script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
+		<script type="text/javascript" src ="{{ url_for('static', filename='piechart.js') }}"></script>
 	</head>
 	<body>
 			<div class = "navbar" style="height:50px;width:100%">
