--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -1,15 +1,60 @@
 {% extends "base_template.html" %} 
 {% block content %}
+<script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
+<script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
+<!--<script type="text/javascript" src ="{{ url_for('static', filename='piechart.js') }}"></script>-->
+ <script type="text/javascript">     
+      google.load("visualization", "1", {packages:["corechart"]});
+      google.setOnLoadCallback(drawChart);
 
+      function drawChart() {
 
-<body>
+      	var device_items = []
+
+      	var device_data = $('#load_device_data').data('device');
+
+      	$.each(device_data, function(key, value){
+      		device_items.push([key, value]);
+      	});
+        
+        var options = {
+	 		is3D: true,
+	        colors: ['#E5D843','#80BF34','#38A660'],
+	        'legend': 'right',
+	        animation:{
+       			duration: 8000,
+        		easing: 'in'
+      		},
+	        pieSliceText: 'percentage',
+	 	  	slices: {
+	                  1: {offset: 0.2},
+	                  2: {offset: 0.1},
+	                  3: {offset: 0.0},
+			                pieSliceTextStyle:{fontSize:'20'},
+			                'pieStartAngle':'160'
+	                
+	        },
+	    };
+
+      	var pie_data = new google.visualization.DataTable();
+      	pie_data.addColumn('string', 'Device Type');
+      	pie_data.addColumn('number', 'Number of Visitors');
+      	pie_data.addRows(device_items);
+
+      	var row = 0;
+      	var col = 0;
+
+      	var chart = new google.visualization.PieChart(document.getElementById('pie'));
+    	chart.draw(pie_data, options);
+
+      }
+ </script>
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<h1 class="text-center text-primary" style = "font-family:Gauntlet">
 				Clara-Lytics
 			</h1>
-			<span> Hello ! {{controller.display_username()}} </span>
 		</div>
 	</div>
 	<div class="row clearfix">
@@ -168,11 +213,11 @@
 						<span class="glyphicon glyphicon-pie-chart"></span> Device Type
 					</h3>
 				</div>
+				<div id="load_device_data" data-device="{{controller.fetch_device_type()}}" style="display:none"></div>	
 				<div class="row clearfix">
 					<div class="col-md-12">
-						<div id = "pie">		
+						<div id = "pie">	
 						</div>
-						
 					</div>
 				</div>
 				
@@ -196,8 +241,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-						
-						<img alt="300x200"  class="img-rounded" src={{ url_for('static', filename='Twitter_logo_blue.png') }}" />
+						<img alt="300x200" class="img-rounded" src="{{ url_for('static', filename='Twitter_logo_blue.png') }}" />
 						<div class="caption">
 							<h3 class="text-center text-primary">
 								25
