--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -13,7 +13,7 @@
 	</div>
 	<div class="row clearfix">
 		<div class="col-md-6 column">
-			<div class="panel panel-primary">
+			<div class="panel panel-info">
 				<div class="panel-heading">
 					<h3 class="panel-title">
 						<span class="glyphicon glyphicon-stats"></span>  Number of Hits
@@ -196,7 +196,7 @@
 				<div class="col-md-4">
 					<div class="thumbnail">
 						
-						<img alt="300x200"  class="img-rounded" src={{ url_for('static', filename='Twitter_logo_blue.png') }}" />
+						<img alt="300x200"  class="img-rounded" src= "{{ url_for('static', filename='Twitter_logo_blue.png') }}" />
 						<div class="caption">
 							<h3 class="text-center text-primary">
 								25
