--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -2,7 +2,6 @@
 {% block content %}
 <script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
 <script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
-<!--<script type="text/javascript" src ="{{ url_for('static', filename='piechart.js') }}"></script>-->
  <script type="text/javascript">     
       google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
@@ -20,6 +19,7 @@
         var options = {
 	 		is3D: true,
 	        colors: ['#E5D843','#80BF34','#38A660'],
+	        title: 'Visitors by Device Type',
 	        'legend': 'right',
 	        animation:{
        			duration: 8000,
@@ -30,9 +30,8 @@
 	                  1: {offset: 0.2},
 	                  2: {offset: 0.1},
 	                  3: {offset: 0.0},
-			                pieSliceTextStyle:{fontSize:'20'},
-			                'pieStartAngle':'160'
-	                
+	                  pieSliceTextStyle:{fontSize:'20'},
+	                  'pieStartAngle':'160'
 	        },
 	    };
 
