--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -1,7 +1,7 @@
 {% extends "base_template.html" %} 
 {% block content %}
-<script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
-<script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
+<!--<script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
+<!--<script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
 <!--<script type="text/javascript" src ="{{ url_for('static', filename='piechart.js') }}"></script>-->
  <script type="text/javascript">     
       google.load("visualization", "1", {packages:["corechart"]});
@@ -49,6 +49,117 @@
 
       }
  </script>
+
+ <!-- script for bargraph -->
+ <script>
+ google.load("visualization", "1", {packages:["corechart"]});
+      google.setOnLoadCallback(drawChart);
+ function drawChart() {
+          // Create and populate the data table.
+        var option = {title:"Hits for The Santa Clara in this month (shown per week)",
+                     width:500, height:200,
+                     animation: {duration: 2000, easing: 'in',},
+                     vAxis: {title: "",titleTextStyle: {color: 'red'}},
+                     'legend':'none',
+                     hAxis: {title: "Hits on each week", minValue:0, maxValue:100,titleTextStyle: {color: 'red'},
+           gridlines:{color:'transparent'}},
+                      series: {
+        0: {
+                    // set the color to change to
+                    color: '009EBF',
+                    // don't show this in the legend
+                    visibleInLegend: false,       
+          
+                },
+                1: {
+                    // set the color to change to
+                    color: 'FFA500',
+                    // don't show this in the legend
+                    visibleInLegend: false,      
+                }
+      }
+        
+                     };
+        var data = new google.visualization.DataTable();    
+        data.addColumn('string', 'Week');
+        data.addColumn('number', 'Hits');
+        data.addRow(['Week1', 0]);
+        data.addRow(['Week2', 0]);
+        data.addRow(['Week3', 0]);
+        data.addRow(['Week4', 0]);
+        data.addColumn('number', 'Other');
+
+        // Create and draw the visualization.
+        var chart = new google.visualization.BarChart(document.getElementById('panel-304865'));
+        chart.draw(data, option);
+        data.setValue(0, 1, 75);
+        data.setValue(1, 1, 55);
+        data.setValue(2, 1, 30);
+        data.setValue(3, 1, 75);
+        chart.draw(data, option);
+      }
+
+ </script>
+
+<!--script for line graph -->
+<script>
+ google.load("visualization", "1", {packages:["corechart"]});
+      google.setOnLoadCallback(drawChart);
+      function drawChart() {
+		var data = new google.visualization.DataTable();
+        data.addColumn('date', 'Date');
+    	data.addColumn('number', 'Hits');
+    	data.addRow([new Date(2013, 0, 1), 0])
+    	data.addRow([new Date(2013, 0, 2), 0])
+    	data.addRow([new Date(2013, 0, 3), 0])
+    	data.addRow([new Date(2013, 0, 4), 0])
+		data.addRow([new Date(2013, 0, 5), 0])
+		data.addRow([new Date(2013, 0, 6), 0])
+		data.addRow([new Date(2013, 0, 7), 0])
+
+        var options = {
+          title: 'Hits per day',
+		  'legend':'none',
+		  colors:['#004411'],
+		  animation: {duration: 1000, easing: 'out',},
+		  hAxis:
+		  {
+			 format:'E,d',
+			 title:'Days in a week',
+			 gridlines:{ color: 'transparent'},
+			 slantedText:true,
+			 slantedTextAngle:30,
+			 textStyle:{
+				 bold:true},
+			 titleTextStyle: {color: 'red'},
+			
+			
+		  },
+		  vAxis:
+		  {
+			 title:'Number of Hits'	 ,
+			  minValue:0, maxValue:100,
+			 gridlines:{count:5,color:'transparent'} ,
+			  textStyle:{
+				 bold:true},
+			 titleTextStyle: {color: 'red'}
+		  },
+		  pointSize:4
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('panel-465099'));
+        chart.draw(data, options);
+		data.setValue(0,1,80);
+    	data.setValue(1,1,20);
+    	data.setValue(2,1,50);
+    	data.setValue(3,1,20);
+		data.setValue(4,1,65);
+		data.setValue(5,1,40);
+		data.setValue(6,1,90);
+		chart.draw(data, options);
+      }
+</script>
+
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
