--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -1,13 +1,5 @@
 {% extends "base_template.html" %} 
 {% block content %}
-<<<<<<< HEAD
-<script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
-<script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
-=======
-<!--<script type="text/javascript" src ="{{ url_for('static', filename='bargraph.js') }}"></script>
-<!--<script type="text/javascript" src ="{{ url_for('static', filename='linegraph.js') }}"></script>
-<!--<script type="text/javascript" src ="{{ url_for('static', filename='piechart.js') }}"></script>-->
->>>>>>> 1d70420dd72b1006aaa02faeea986bb8df574a44
  <script type="text/javascript">     
       google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
@@ -57,16 +49,16 @@
 
  <!-- script for bargraph -->
  <script>
- google.load("visualization", "1", {packages:["corechart"]});
+	  google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
- function drawChart() {
+ 	  function drawChart() {
           // Create and populate the data table.
         var option = {title:"Hits for The Santa Clara in this month (shown per week)",
                      width:500, height:200,
                      animation: {duration: 2000, easing: 'in',},
                      vAxis: {title: "",titleTextStyle: {color: 'red'}},
                      'legend':'none',
-                     hAxis: {title: "Hits on each week", minValue:0, maxValue:100,titleTextStyle: {color: 'red'},
+                     hAxis: {title: "Hits on each week", minValue:0, maxValue:800,titleTextStyle: {color: 'red'},
            gridlines:{color:'transparent'}},
                       series: {
         0: {
@@ -84,23 +76,25 @@
                 }
       }
         
-                     };
+     };
+		var monthly_hits = $('#load_monthly_hits').data('mhits');
+
         var data = new google.visualization.DataTable();    
         data.addColumn('string', 'Week');
         data.addColumn('number', 'Hits');
-        data.addRow(['Week1', 0]);
-        data.addRow(['Week2', 0]);
-        data.addRow(['Week3', 0]);
-        data.addRow(['Week4', 0]);
-        data.addColumn('number', 'Other');
+        $.each(monthly_hits, function(key, value){
+        	data.addRow(['Week' + key, 0]);
+        });
 
         // Create and draw the visualization.
+
         var chart = new google.visualization.BarChart(document.getElementById('panel-304865'));
         chart.draw(data, option);
-        data.setValue(0, 1, 75);
-        data.setValue(1, 1, 55);
-        data.setValue(2, 1, 30);
-        data.setValue(3, 1, 75);
+        var row_index = 0;
+        $.each(monthly_hits, function(key, value){
+        	data.setValue(row_index, 1, value);
+        	row_index++;
+        });
         chart.draw(data, option);
       }
 
@@ -108,61 +102,58 @@
 
 <!--script for line graph -->
 <script>
- google.load("visualization", "1", {packages:["corechart"]});
+ 	  google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
+
       function drawChart() {
+
+      	var weekly_stats = []
+		var weekly_hits = $('#load_weekly_hits').data('whits');
+
+      	$.each(weekly_hits, function(key, value){  		
+      		weekly_stats.push([key, 0]);
+      	});
+
 		var data = new google.visualization.DataTable();
-        data.addColumn('date', 'Date');
-    	data.addColumn('number', 'Hits');
-    	data.addRow([new Date(2013, 0, 1), 0])
-    	data.addRow([new Date(2013, 0, 2), 0])
-    	data.addRow([new Date(2013, 0, 3), 0])
-    	data.addRow([new Date(2013, 0, 4), 0])
-		data.addRow([new Date(2013, 0, 5), 0])
-		data.addRow([new Date(2013, 0, 6), 0])
-		data.addRow([new Date(2013, 0, 7), 0])
+        data.addColumn('string', 'Date');
+    	data.addColumn('number', 'Number of Visitors');
+    	data.addRows(weekly_stats);
 
         var options = {
-          title: 'Hits per day',
+          title: 'Visitors per day',
 		  'legend':'none',
 		  colors:['#004411'],
-		  animation: {duration: 1000, easing: 'out',},
+		  animation: {duration: 1000, easing: 'out'},
 		  hAxis:
 		  {
 			 format:'E,d',
 			 title:'Days in a week',
-			 gridlines:{ color: 'transparent'},
+			 gridlines:{ color: 'red'},
 			 slantedText:true,
 			 slantedTextAngle:30,
-			 textStyle:{
-				 bold:true},
-			 titleTextStyle: {color: 'red'},
-			
-			
+			 textStyle:{bold:true},
+			 titleTextStyle: {color: 'red'}
 		  },
 		  vAxis:
 		  {
 			 title:'Number of Hits'	 ,
-			  minValue:0, maxValue:100,
-			 gridlines:{count:5,color:'transparent'} ,
-			  textStyle:{
-				 bold:true},
+			 minValue:0, maxValue:100,
+			 gridlines:{count:5, color:'transparent'},
+			 textStyle:{bold:true},
 			 titleTextStyle: {color: 'red'}
 		  },
 		  pointSize:4
         };
 
         var chart = new google.visualization.LineChart(document.getElementById('panel-465099'));
-        chart.draw(data, options);
-		data.setValue(0,1,80);
-    	data.setValue(1,1,20);
-    	data.setValue(2,1,50);
-    	data.setValue(3,1,20);
-		data.setValue(4,1,65);
-		data.setValue(5,1,40);
-		data.setValue(6,1,90);
 		chart.draw(data, options);
-      }
+		var row_index = 0;
+      	$.each(weekly_hits, function(key, value){  		
+      		data.setValue(row_index, 1, value);
+      		row_index++;
+      	});
+      	chart.draw(data, options);
+	}
 </script>
 
 <div class="container">
@@ -191,11 +182,13 @@
 					</li>
 				</ul>
 				<div class="tab-content graphs">
-					<div class="tab-pane active" id="panel-465099" style="width: 500px; height: 200px;">
+					<div id="load_weekly_hits" data-whits="{{controller.fetch_weekly_visits()}}" style="display:none"></div>	
+					<div class="tab-pane active weekly_hits" id="panel-465099" style="width: 500px; height: 200px;">
 						<p>
 							hits for a week
 						</p>
 					</div>
+					<div id="load_monthly_hits" data-mhits="{{controller.fetch_monthly_visits()}}" style="display:none"></div>	
 					<div class="tab-pane" id="panel-304865" style="width: 500px; height: 200px;">
 						<p>
 							hits for a month
