--- a/app/static/style.css
+++ b/app/static/style.css
@@ -9,9 +9,9 @@
   line-height: 1.1;
 }
 
-.btn-sm {
+/*.btn-sm {
   	background-color: #80BF34;
-}
+}*/
 
 .lastRow{
 	border: 1px solid #ddd;
@@ -31,28 +31,39 @@
 }
 
 .nav-wrapper{
-  padding-top: 10px;
+  padding-top: 5px;
   margin-left: 1.5%;
   margin-right: 1.5%;
 }
 
-.app-header{
-  margin-top: 5%;
-  font-family: Gauntlet, Helvetica;
-  color: white;
+.user-icon{
+  margin-left: 10px;
+  color: #428bca;
+  font-size: 15pt;
+  margin-top: 6.5%;
 }
 
-#welcome-msg{
+.app-header {
+  margin-top: 3.5%;
+  font-family: Gauntlet, Helvetica;
   color: white;
-  font-family: Gauntlet;
-  font-size: 15px;
+  font-weight: 800;
+  font-size: 33pt;
+ }
+
+ .app-header:hover{
+  margin-top: 3.5%;
+  font-family: Gauntlet, Helvetica;
+  color: white;
+  font-weight: 800;
+  font-size: 33pt;
 }
 
 #login_button a{
   float:right;
   color: white;
   font-family: Gauntlet;
-  font-size: 20px;
+  font-size: 15pt;
 }
 
 /* 
@@ -69,4 +80,36 @@
   width: 525px; 
   height: 200px;
   margin-left:2.5%;
+}
+
+/*
+  Styles for user menu
+*/
+
+.user-menu{
+  width: 250px;
+  height: 75px;
+  margin-top:-1.5%;
+  border-radius: 0px;
+}
+
+.user-menu li{
+  text-align: center;
+}
+
+.welcome-msg{
+  font-family: Gauntlet, Helvetica;
+  font-size: 12pt;
+  font-weight: 600;
+}
+
+.logout-btn{
+  margin-right: 2%;
+  margin-top: 2px;
+  border-radius: 0px;  
+}
+
+.nav-buttons{
+  margin-bottom: 2%;
+  margin-left: 30%;
 }
