--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -19,11 +19,19 @@
 						ClaraLytics
 					</h1>
 				</div>
-				<div class = "right" style="float:right;height:inherit;">
+				<div class = "right" style="float:right;height:inherit">
 					<div id="login_button">
 						{% if username %}
-							<p id="welcome-msg"> Welcome! {{ username }} </p>
-							<a href="/logout"> Logout </a>
+							<!--<span class="welcome-msg">Welcome! {{ username }}</span>-->
+						  	<button type="button" class="btn btn-default dropdown-toggle glyphicon glyphicon-user user-icon" data-toggle="dropdown">
+						  	<span class="caret"></span>
+  							</button>
+							<ul class="dropdown-menu pull-right user-menu" role="menu">
+							    <li class="welcome-msg">Welcome! {{ username }}</li>
+							    <li class="login-button"><a class="logout-btn btn btn-primary" href="/logout" role="button">Logout</a></li>
+							 </ul>
+							<br>
+							<!--<a href="/logout"> Logout </a>-->
 						{% else %}
 							<a href="/login"> Login </a>
 						{% endif %}
