--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -208,18 +208,19 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="row clearfix">
+			<!--<div class="nav-buttons row clearfix">
 				<div class="col-md-4 column">
 				</div>
 				<div class="col-md-4 column">
-					 <button type="button" class="btn btn-sm ">
+					 <button type="button" class="nav-btns btn btn-sm btn-primary">
 					 	<span class="glyphicon glyphicon-chevron-left"></span>Prev</button>
 				</div>
 				
 				<div class="col-md-4 column">
-					 <button type="button" class="btn btn-sm nextbtn">Next<span class="glyphicon glyphicon-chevron-right"></span></button>
+					 <button type="button" class="nav-btns btn btn-sm nextbtn btn-primary">Next<span class="glyphicon glyphicon-chevron-right"></span>
+					 </button>
 				</div>
-			</div> --> 
+			</div>--> 
 			</div>
 		</div>
 		<div class="col-md-6 column">
@@ -261,7 +262,7 @@
 			<div class="panel panel-info">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<span class="glyphicon glyphicon-google-maps"></span>Geographic User Base
+						<span class="glyphicon glyphicon-road"></span> Geographic User Base
 					</h3>
 				</div>
 				<div class="panel-body">
@@ -276,7 +277,7 @@
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h3 class="panel-title">
-						<span class="glyphicon glyphicon-pie-chart"></span> Device Type
+						<span class="glyphicon glyphicon-phone"></span> Device Type
 					</h3>
 				</div>
 				<div id="load_device_data" data-device="{{controller.fetch_device_type()}}" style="display:none"></div>	
