--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,73 @@
 {% extends "base_template.html" %} 
 {% block content %}
-	<h3> Welcome to this Flask App </h3>
-	<p> Please Sign In </p>
-	<br>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultricies fermentum mollis. Curabitur condimentum tortor 	ullamcorper, varius turpis at, consequat leo. Maecenas varius convallis ullamcorper. Quisque a lobortis sapien, eu rutrum velit. Phasellus risus massa, vestibulum sed rutrum et, commodo posuere mauris. Cras euismod viverra neque, eu molestie quam feugiat eu. Etiam ornare libero nec eleifend viverra. Nulla justo erat, malesuada quis lectus sit amet, gravida viverra libero. Donec sagittis felis tincidunt, molestie metus eget, accumsan velit. Vivamus tincidunt vehicula ultricies. Aliquam erat volutpat. Proin egestas molestie eros, id commodo nibh consequat ut. Maecenas non viverra metus. Duis vitae nibh vel arcu viverra pulvinar at at nibh. Mauris in urna id augue volutpat faucibus id eu nulla. Integer erat nisl, tincidunt sed mattis et, aliquet non sapien.</p>
+	<div class="container">
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<div class="jumbotron well landingTitle">
+				<h1 class ="projTitle" >
+					Clara-Lytics
+				</h1>
+				<p>
+					A Website Analytics DashBoard
+				</p>
+				
+			</div>
+		</div>
+	</div>
+	<div class="row clearfix">
+		<div class="col-md-2 column">
+		</div>
+		<div class="col-md-6 column">
+			<h2>
+				
+			</h2>
+			<p>
+				A Web Analytics Dashboard
+			</p>
+			<p>
+				<!--<a class="btn" href="#">View details »</a>-->
+				<!--<a href="/login"> Login </a>-->
+				<a href="/login" class="btn btn-lg btn-primary btn-block" role ="button"> Login with Google Account </a>
+			<!--</p> <button type="button" class="btn btn-lg btn-primary btn-block">Login with Google Account</button>-->
+		</div>
+		<div class="col-md-4 column">
+		</div>
+	</div>
+	<div class="row clearfix">
+		<div class="col-md-6 column">
+		</div>
+		<div class="col-md-6 column">
+		</div>
+	</div>
+	<footer>
+		<div class="row clearfix">		
+		<div class="col-md-4 column">
+			<p>
+				About Clara-Lytics
+			</p>
+			<p>
+				The clara-Lytics is an analytics dashboard that helps you analyse your website's traffic using various metrics
+			</p>
+		</div>
+		<div class="col-md-4 column">
+			<p>
+				Features
+			</p>
+			<p>
+				The clara-Lytics is an analytics dashboard that helps you analyse your website's traffic using various metrics
+			</p>
+		</div>
+		<div class="col-md-4 column">
+			<p>
+				Contact Us
+			<p>
+			<p>
+				<small> Prithvi, Pooja , Pranav</small>
+			</p>
+		</div>
+	</div>
+	</footer>
+	
+</div>
 
-	<p>Maecenas id eros ac arcu consectetur vulputate et eu urna. Pellentesque rutrum, felis id pellentesque viverra, sem sem ultricies libero, in condimentum sapien ligula at ligula. Aliquam congue euismod dui, et vestibulum arcu hendrerit nec. Nunc non varius nisl. Ut elementum ipsum pretium felis luctus consequat. Etiam varius non neque nec gravida. Donec et viverra tortor, quis blandit massa. Nulla facilisi. Aliquam sit amet lectus a sapien molestie porttitor. Suspendisse imperdiet pellentesque vestibulum. Aliquam elementum est auctor cursus adipiscing. Donec quis turpis eget sem dignissim dignissim. Praesent auctor urna sit amet lacus pulvinar tempor. Suspendisse tempor, ligula vitae auctor fringilla, nibh quam scelerisque dui, at volutpat mauris urna et ipsum. Morbi egestas dapibus neque, id sodales leo imperdiet ut. Proin vitae sollicitudin erat, eget rhoncus velit.</p>
 {% endblock %}
