--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 					Clara-Lytics
 				</h1>
 				<p>
-					A Website Analytics DashBoard
+					A Web Analytics DashBoard
 				</p>
 				
 			</div>
