--- a/app/templates/dashboard_new.html
+++ b/app/templates/dashboard_new.html
@@ -306,7 +306,7 @@
 				$.each(geo_data, function(key, value){
       				geo_items.push([key, value]);
 					});
-					console.log(geo_items);
+					//console.log(geo_items);
 				
 				var source="{{url_for('static',filename='MapCoordinates.json')}}";
 				
