First push to appengine

--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -11,8 +11,8 @@
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script src="http://d3js.org/d3.v2.js"></script>
 	</head>
-	<body>
-		<div class="content">
+	<body style="width: 100%;border:2px solid orange;">
+		<div class="content" style="width:100%; border:2px solid blue;">
 		{% block content %}{% endblock %}
 		</div>
 	</body>
