--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
 		<div class="col-md-6 column">
 		</div>
 	</div>
-	<footer>
+	<footer style="background-color: gray">
 		<div class="row clearfix">		
 		<div class="col-md-4 column">
 			<p>
